--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
   align-items: center;
 }
 .app-wrapper {
-  background-color: #12343b;
+  background-color: rgba(3, 1, 1, 0.9);
+  border-top: 1px solid rgba(255,255,255,0.5);
+  border-left: 1px solid rgba(255,255,255,0.5);
   min-width: 450px;
   min-height: 650px;
   padding: 30px;
